fixed overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -309,3 +309,7 @@ input[type="range"]::-ms-thumb {
   background: #0f9;
   cursor: pointer;
 }
+
+* {
+  outline: 1px white solid;
+}
